--- a/templates/display_integers.html
+++ b/templates/display_integers.html
@@ -5,18 +5,40 @@
     {% if title %}
     <title>{{title}}</title>
     {% endif %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
 </head>
 <body>
 {% if title %}
     <h1>{{title}}</h1>
 {% endif %}
 <!-- Print all digits  in list -->
-<ol style="border-style: solid; overflow:hidden; overflow-y:scroll; height:300px; width:18%;">
+<ol style="border-style: solid; overflow:hidden; overflow-y:scroll; max-height:300px; width:18%;">
 <!-- Look through numbers if n is present -->
 {%for i in numbers%}
     <ul list-style-type="none">{{i}}</ul>
 {%endfor%}
 </ol>
+
+<div class="container">
+      {{ pagination.links }}
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>#</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for number in numbers %}
+            <tr>
+              <td>{{ number }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+      {{ pagination.links }}
+    </div>
 
 </body>
 </html>
